test/invalid/baseline/inheritance-typeless.txt
Syntax error at line 1 in inheritance-typeless.webidl, since `interface X`:
interface X: {};
             ^ Inheritance lacks a type
